# Genetics-Physics2D

./: .gitignore  README.md  firstgen.py  pyproject.toml  requeriments.txt  setup.cfg
.ipynb_checkpoints/: BouncingBall-checkpoint.ipynb
notebooks/: test.ipynb
tests/: test_example.py
