[tool.poetry]
name = "genetics-physics2d"
version = "0.1.0"
description = ""
authors = ["Rodrigo Maurino"]
readme = "README.md"
packages = [{include = "genetics_physics2d"}]

[tool.poetry.dependencies]
python = "^3.10"
pymunk = "^6.4.0"
pygame = "^2.1.2"
pytest = "^7.2.0"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
